# Rrender

./: .gitignore  CMakeLists.txt  README.md
include/: project_root_config.h.in
include/core/: InputListener.h  InputManager.h  Window.h
include/graphics/: Camera.h  CameraController.h  Light.h  Mesh.h  Model.h  Shader.h  Texture.h
include/pipeline/: BlinnPhongPipeline.h  OutlinePipeline.h  RenderPipeline.h
include/resource/: ResourceManager.h
include/scene/: Entity.h  Scene.h
include/ui/: UIManager.h
include/utils/: PathResolver.h  Time.h
shaders/: basic.frag  basic.vert
shaders/blinn_phong/: blinnphong.frag  blinnphong.vert
shaders/outline/: outline.frag
src/: CMakeLists.txt  main.cpp
src/core/: InputManager.cpp  Window.cpp
src/graphics/: Camera.cpp  CameraController.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp
src/pipeline/: BlinnPhongPipeline.cpp  OutlinePipeline.cpp
src/resource/: ResourceManager.cpp
src/scene/: Entity.cpp  Scene.cpp
src/ui/: UIManager.cpp
src/utils/: Time.cpp
